# vendify

./: .rustfmt.toml  AUTHORS  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
example/: .vendor-lock.yml  .vendor.yml  README.md
scripts/: generate-authors.sh
src/: cache.rs  cli.rs  control.rs  dependency.rs  deps.rs  filters.rs  git.rs  importer.rs  installer.rs  lib.rs  lock.rs  main.rs  preset.rs  repository.rs  spec.rs  spec_lock.rs  test_utils.rs  yaml.rs
src/cli/: commands.rs  main.rs  mod.rs  structs.rs
src/cli/commands/: add.rs  init.rs  install.rs  update.rs
src/core/: cache.rs  controller.rs  dependency.rs  git.rs  importer.rs  installer.rs  iterator.rs  mod.rs  preset.rs  repository.rs  spec.rs  spec_lock.rs  tests.rs  vendor_lock.rs  vendor_spec.rs
src/core/dependency/: dependency.rs  dependency_lock.rs  manager.rs  mod.rs
src/core/importer/: collector.rs  iterator.rs  selector.rs
src/core/installer/: dependency.rs  mod.rs  selector.rs  spec.rs
src/core/managers/: dependency.rs  mod.rs  vendor.rs
src/core/paths/: cache.rs  cache_path_factory.rs  iterator.rs  mod.rs  path_collector.rs  repository.rs  repository_cache.rs  selector.rs
src/core/repository/: repository_path_factory.rs
src/core/utils/: git_ops.rs  loadable_config.rs  mod.rs  path_selector.rs  tests.rs
src/core/vendor_spec/: manager.rs  vendor.rs
src/importer/: collector.rs  selector.rs
src/installer/: collector.rs  importer.rs  selector.rs
src/repository/: git.rs
