[package]
name = "vendor"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3", features = ["derive"] }
git2 = "0.14"
git2_credentials = "0.8"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
sha2 = "0.10"
simplelog = "0.12"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
